--- a/app/views/positivos/show.html.erb
+++ b/app/views/positivos/show.html.erb
@@ -106,7 +106,47 @@
 <script>
 var map = L.map('map').setView([<%= @lonlat.y%>,<%= @lonlat.x%>], 13);
 
-var marker = L.marker([<%= @lonlat.y%>,<%= @lonlat.x%>]).addTo(map);
+
+var icon;
+
+
+function determineColor(arbo) {
+  if ( arbo === 'Dengue') {
+    icon = L.icon ({
+       iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png',
+        shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/images/marker-shadow.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+        shadowSize: [41, 41]
+    });
+  } else if ( arbo === 'Zika' ) {
+    icon = L.icon ({
+       iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png',
+        shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/images/marker-shadow.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+        shadowSize: [41, 41]
+    });
+  } else {
+    icon = L.icon ({
+       iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-yellow.png',
+        shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/images/marker-shadow.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+        shadowSize: [41, 41]
+    }); 
+  }
+}
+var temp = determineColor("<%= @positivo.arbo%>");
+
+var marker = L.marker([<%= @lonlat.y%>,<%= @lonlat.x%>], {icon: icon}).addTo(map).bindPopup("Arbo: <%= @positivo.arbo%> Edad: <%= @positivo.edad%> Sexo: <%= @positivo.sexo%> <br> Barrio: <%= @positivo.barrio.nombre%> Distrito: <%= @positivo.distrito.nombre%>"
+
+
+
+  ).openPopup();
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 }).addTo(map);
