--- a/app/views/positivos/index.html.erb
+++ b/app/views/positivos/index.html.erb
@@ -4,7 +4,7 @@
                                 <div class="main-card mb-6 card">
                                     <div class="card-body"><h5 class="card-title">Casos Positivos</h5>
 
-<table class="mb-0 table table-bordered" id="dttb">
+<table class="mb-3 table table-hover table-striped table-bordered" id="dttb">
   <thead>
    <tr>
       <th>Nombre</th>
@@ -34,8 +34,8 @@
         <td><%= positivo.distrito.nombre %></td>
         <td><%= link_to positivo do %>
  
-   <span>Ver en Mapa</span>
-    <i class="pe-7s-map-marker icon-gradient bg-premium-dark"></i>
+   <span class="btn btn-outline-primary">Ver en Mapa  <i class="pe-7s-map-marker"></i></span>
+   
 <% end %>        </td>
  
       </tr>
