añadido slider de tiempo base

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,11 @@
 
   <head>
     <title>Proygrado</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     
+
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
       
@@ -14,7 +18,7 @@
     <link rel="stylesheet" href="pe-icon-7-stroke/css/pe-icon-7-stroke.css">
 
     <!-- Optional - Adds useful class to manipulate icon font display -->
-    <link rel="stylesheet" href="pe-icon-7-stroke/css/helper.css">
+    <link rel="stylesheetz" href="pe-icon-7-stroke/css/helper.css">
 
   </head>
 
@@ -23,7 +27,7 @@
   <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
     <div class="app-header header-shadow">
       <div class="app-header__logo">
-        <div class="logo-src"></div>
+    
         <div class="header__pane ml-auto">
           <div>
             <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
