--- a/app/views/mapas/mapas.html.erb
+++ b/app/views/mapas/mapas.html.erb
@@ -5,6 +5,9 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.control.min.css"/>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/iso8601-js-period@0.2.1/iso8601.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
         <div class="col-lg-12">
             <div class="main-card mb-6 card">
                 <div class="card-body"><h5 class="card-title">Casos Positivos Confirmados</h5>
@@ -33,6 +36,7 @@
                 var map = L.map('map',{
                     center: [-27.33, -55.87],
                     zoom:  12,
-                    layers: [osm]
+                    layers: [osm],
+                    timeDimension: true
                 });
 </script>
