--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *= require leaflet
  *= require_tree .
-*= require datatables
+ *= require datatables
+ *= require fullscreen
  *= require_self
  */
