--- a/app/views/mapas/mapas.html.erb
+++ b/app/views/mapas/mapas.html.erb
@@ -22,10 +22,8 @@
             <br>
             <div class="col-lg-12">
              <div class="main-card mb-6 card">
-                <input type="text" id="daterange" class="form-control pull-right">
                 <div id="map" style="height: 720px">
-
-                </div>
+                    <div id="datepicker"></div>
             </div>
         </div>
 
@@ -37,6 +35,7 @@
                     center: [-27.33, -55.87],
                     zoom:  12,
                     layers: [osm],
-                    timeDimension: true
+                    timeDimension: true,
+                     fullscreenControl: true
                 });
 </script>
