--- a/app/views/positivos/show.html.erb
+++ b/app/views/positivos/show.html.erb
@@ -113,8 +113,8 @@ var icon;
 function determineColor(arbo) {
   if ( arbo === 'Dengue') {
     icon = L.icon ({
-       iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-red.png',
-        shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/images/marker-shadow.png',
+      iconUrl: "/assets/marker-icon-red.png",
+  shadowUrl: "/assets/marker-shadow.png",
         iconSize: [25, 41],
         iconAnchor: [12, 41],
         popupAnchor: [1, -34],
@@ -122,8 +122,8 @@ function determineColor(arbo) {
     });
   } else if ( arbo === 'Zika' ) {
     icon = L.icon ({
-       iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png',
-        shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/images/marker-shadow.png',
+      iconUrl: "/assets/marker-icon-green.png",
+  shadowUrl: "/assets/marker-shadow.png",
         iconSize: [25, 41],
         iconAnchor: [12, 41],
         popupAnchor: [1, -34],
@@ -131,8 +131,8 @@ function determineColor(arbo) {
     });
   } else {
     icon = L.icon ({
-       iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-yellow.png',
-        shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/images/marker-shadow.png',
+      iconUrl: "/assets/marker-icon-yellow.png",
+  shadowUrl: "/assets/marker-shadow.png",
         iconSize: [25, 41],
         iconAnchor: [12, 41],
         popupAnchor: [1, -34],
