Añadido index datos avanzado

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *= require leaflet
  *= require_tree .
  *= require datatables
+ *= require custom
  *= require fullscreen
  *= require_self
  */
