--- a/app/views/mapas/mapas.html.erb
+++ b/app/views/mapas/mapas.html.erb
@@ -8,6 +8,8 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.control.min.css"/>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/iso8601-js-period@0.2.1/iso8601.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
+        <script type="text/javascript" src="/javascript/mapas.js"></script>
+        <script type="text/javascript" src="/javascript/fullscreen.js"></script>
         <div class="col-lg-12">
             <div class="main-card mb-6 card">
                 <div class="card-body"><h5 class="card-title">Casos Positivos Confirmados</h5>
