--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
      
@@ -27,7 +30,6 @@
                 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
                 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     
-               
   </head>
 
   <body>
@@ -460,61 +462,27 @@
           </li>
           <li class="app-sidebar__heading">Mapas</li>
 
-          <li
-
-
-
-
-
-
-
-
-
-
-
-          >
+          <li>
             <a href="#">
               <i class="metismenu-icon pe-7s-map  "></i>
               Mapa de Positivos
               <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
             </a>
-            <ul
-
-
-
-
-
-
-
-
-
-
-
-            >
+            <ul>
                 <li>
-               <%= link_to mapas_path do %>
+               <%= link_to mapa_positivos_path do %>
   <i class="metismenu-icon"></i>
    Mapa de Positivos
 <% end %>
               </li>
-              <li>
-                <a href="components-accordions.html">
-                  <i class="metismenu-icon">
-                  </i>Mapa de Dengue
-                </a>
+                    <li>
+               <%= link_to heat_map_path do %>
+  <i class="metismenu-icon"></i>
+   Mapa de Calor de Arbovirus
+<% end %>
               </li>
-              <li>
-                <a href="components-notifications.html">
-                  <i class="metismenu-icon">
-                  </i>Mapa de Zika
-                </a>
-              </li>
-              <li>
-                <a href="components-modals.html">
-                  <i class="metismenu-icon">
-                  </i>Mapa de Chikungunya
-                </a>
-              </li>
+              
+              
               
               
             
