--- a/app/views/positivos/avanzado.html.erb
+++ b/app/views/positivos/avanzado.html.erb
@@ -1,20 +1,28 @@
 
+
+
+
+
  <div class="col-lg-12">
                                 <div class="main-card mb-6 card">
                                     <div class="card-body"><h5 class="card-title">Casos Positivos</h5>
 
-<table class="mb-3 table table-hover table-striped table-bordered" id="dttb">
+<table class="mb-3 table table-hover table-striped table-bordered" id="dttb1">
   <thead>
    <tr>
+      <th>Arbo</th>
+      <th>Serotipo</th>
       <th>Nombre</th>
       <th>Apellido</th>
       <th>Edad</th>
        <th>Sexo</th>
+        <th>Fecha de Notificacion</th>
+         <th>Fecha de sintomas</th>
+         <th>Estado</th>
         <th>Barrio</th>
       <th>Cuidad</th>
       <th>Distrito</th>
-      <th>Arbo</th>
-      <th>Serotipo</th>
+    
        <th>Ver en mapa</th>
       
     </tr>
@@ -24,15 +32,19 @@
     <% @json.each do |positivo| %>
 
       <tr>
+
+           <td><%= positivo["arbo_nombre"] %></td>
+           <td><%= positivo["serotipo_nombre"] %></td>
         <td><%= positivo['nombre'] %></td>
          <td><%= positivo["apellido"] %></td>
           <td><%= positivo["edad"] %></td>
           <td><%= positivo["sexo"] %></td>
+           <td><%= positivo["fecha_notificacion"] %></td>
+           <td><%= positivo["fecha_sintoma"] %></td>
+           <td><%= positivo["estado"] %></td>
            <td><%= positivo["barrio_nombre"] %></td>
            <td><%= positivo["cuidad_nombre"] %></td>
            <td><%= positivo["distrito_nombre"] %></td>
-           <td><%= positivo["arbo_nombre"] %></td>
-           <td><%= positivo["serotipo_nombre"] %></td>
           
         <td><%= link_to positivo_path(:id =>positivo["id"] ) do %>
  
