Añadido rutas de positivos avanzado al layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -437,27 +437,16 @@
               <li>
                <%= link_to positivos_path do %>
   <i class="metismenu-icon"></i>
-   Positivos Confirmados
+   Datos Positivos
 <% end %>
               </li>
               <li>
-                <a href="elements-navigation.html">
-                  <i class="metismenu-icon">
-                  </i>Positivos Dengue
-                </a>
+               <%= link_to positivos_avanzado_path do %>
+  <i class="metismenu-icon"></i>
+   Datos Positivos - Avanzado
+<% end %>
               </li>
-              <li>
-                <a href="elements-navigation.html">
-                  <i class="metismenu-icon">
-                  </i>Positivos Zika 
-                </a>
-              </li>
-              <li>
-                <a href="elements-utilities.html">
-                  <i class="metismenu-icon">
-                  </i>Positivos Chikugunya
-                </a>
-              </li>
+             
             </ul>
           </li>
           <li class="app-sidebar__heading">Mapas</li>
