--- a/app/views/mapas/mapas.html.erb
+++ b/app/views/mapas/mapas.html.erb
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="/javascript/fullscreen.js"></script>
         <div class="col-lg-12">
             <div class="main-card mb-6 card">
-                <div class="card-body"><h5 class="card-title">Casos Positivos Confirmados</h5>
+                <div class="card-body"><h5 class="card-title">Mapa de Casos Confirmados</h5>
 
 
 
