--- a/app/views/positivos/avanzado.html.erb
+++ b/app/views/positivos/avanzado.html.erb
@@ -1,24 +1,22 @@
 
-
-
-
-
- <div class="col-lg-12">
-                                <div class="main-card mb-6 card">
-                                    <div class="card-body"><h5 class="card-title">Casos Positivos</h5>
-
-<table class="mb-3 table table-hover table-striped table-bordered" id="dttb1">
+  <div class="col-xl-9 col-lg-6 col-md-6">
+                                <div class="main-card mb-3 card">
+                                    <div class="card-header"><h5 class="card-title">Casos Positivos -   Avanzado</h5>
+                                    </div>
+                                    <div class="card-body">
+<table class="mb-3 table table table-hover table-striped table-bordered" id="dttb1">
   <thead>
    <tr>
       <th>Arbo</th>
       <th>Serotipo</th>
+        <th>Estado</th>
       <th>Nombre</th>
       <th>Apellido</th>
       <th>Edad</th>
        <th>Sexo</th>
         <th>Fecha de Notificacion</th>
          <th>Fecha de sintomas</th>
-         <th>Estado</th>
+       
         <th>Barrio</th>
       <th>Cuidad</th>
       <th>Distrito</th>
@@ -35,13 +33,18 @@
 
            <td><%= positivo["arbo_nombre"] %></td>
            <td><%= positivo["serotipo_nombre"] %></td>
+          <td><% if positivo["estado"] == true %>
+          <div class="badge badge-pill badge-success"> Activo </div>
+          <% else %>
+          <div class="badge badge-pill badge-secondary"> Inactivo</div>
+            <% end %></td>
         <td><%= positivo['nombre'] %></td>
          <td><%= positivo["apellido"] %></td>
           <td><%= positivo["edad"] %></td>
           <td><%= positivo["sexo"] %></td>
            <td><%= positivo["fecha_notificacion"] %></td>
            <td><%= positivo["fecha_sintoma"] %></td>
-           <td><%= positivo["estado"] %></td>
+        
            <td><%= positivo["barrio_nombre"] %></td>
            <td><%= positivo["cuidad_nombre"] %></td>
            <td><%= positivo["distrito_nombre"] %></td>
@@ -61,5 +64,5 @@
 
 </div>
 
-</div></div>
-
+</div>
+</div>
