--- a/app/views/positivos/index.html.erb
+++ b/app/views/positivos/index.html.erb
@@ -1,20 +1,24 @@
 
  <div class="col-lg-12">
                                 <div class="main-card mb-6 card">
-                                    <div class="card-body"><h5 class="card-title">Casos Positivos</h5>
+                                  <div class="card-header"><h5 class="card-title">Casos Positivos Activos</h5>
+                                    </div>
+                                    <div class="card-body">
 
 <table class="mb-3 table table-hover table-striped table-bordered" id="dttb">
   <thead>
    <tr>
-      <th>Nombre</th>
-      <th>Apellido</th>
+      <th>Notificacion Nº</th>
+        <th>Arbo</th>
+      <th>Serotipo</th>
+      <th>Fecha Notificacion</th>
+      <th>Fecha Inicio Sintomas</th>
       <th>Edad</th>
        <th>Sexo</th>
         <th>Barrio</th>
       <th>Cuidad</th>
       <th>Distrito</th>
-      <th>Arbo</th>
-      <th>Serotipo</th>
+    
        <th>Ver en mapa</th>
       
     </tr>
@@ -24,15 +28,26 @@
     <% @json.each do |positivo| %>
 
       <tr>
-        <td><%= positivo['nombre'] %></td>
-         <td><%= positivo["apellido"] %></td>
+ <td><%= positivo["id"] %></td>
+         <td>
+          <% if positivo["arbo_nombre"] === 'Dengue' %>
+          <div class="badge badge-danger">Dengue</div>
+          <% end %>
+          <% if positivo["arbo_nombre"] === 'Chikungunya' %>
+          <div class="badge badge-warning">Chikungunya</div>
+          <% end %>
+          <% if positivo["arbo_nombre"] === 'Zika' %>
+          <div class="badge badge-success">Zika</div>
+          <% end %></td>
+           <td><%= positivo["serotipo_nombre"] %></td>
+         <td><%= positivo["fecha_notificacion"] %></td>
+         <td><%= positivo["fecha_sintoma"] %></td>
           <td><%= positivo["edad"] %></td>
           <td><%= positivo["sexo"] %></td>
            <td><%= positivo["barrio_nombre"] %></td>
            <td><%= positivo["cuidad_nombre"] %></td>
            <td><%= positivo["distrito_nombre"] %></td>
-           <td><%= positivo["arbo_nombre"] %></td>
-           <td><%= positivo["serotipo_nombre"] %></td>
+          
           
         <td><%= link_to positivo_path(:id =>positivo["id"] ) do %>
  
