--- a/app/views/positivos/index.html.erb
+++ b/app/views/positivos/index.html.erb
@@ -1,5 +1,5 @@
 
- <div class="col-lg-12">
+ <div class="container-lg">
                                 <div class="main-card mb-6 card">
                                   <div class="card-header"><h5 class="card-title">Casos Positivos Activos</h5>
                                     </div>
@@ -51,7 +51,7 @@
           
         <td><%= link_to positivo_path(:id =>positivo["id"] ) do %>
  
-   <span class="btn btn-outline-primary">Ver en Mapa  <i class="pe-7s-map-marker"></i></span>
+   <span class="btn btn-outline-primary"><i class="pe-7s-map-marker"></i></span>
    
 <% end %>        </td>
       
