--- a/app/views/welcome/dashboard.html.erb
+++ b/app/views/welcome/dashboard.html.erb
@@ -32,106 +32,12 @@
   
 </head>
 
- <% if current_page?(login_path)  %>
-
-
-<body>
-    <div class="app-container app-theme-white body-tabs-shadow closed-sidebar closed-sidebar-mobile ">
-        <div class="app-container closed-sidebar-mobile closed-sidebar">
-            <div class="h-100 bg-plum-plate bg-animation">
-                <div class="d-flex h-100 justify-content-center align-items-center">
-                    <div class="mx-auto app-login-box col-md-8">
-                        
-                        <div class="modal-dialog w-100 mx-auto">
-                            <div class="modal-content">
-                                <div class="modal-body">
-                                    <div class="h5 modal-title text-center">
-                                        <h4 class="mt-2">
-                                            <div>Bienvenido,</div>
-                                            <span>Acceda a su usuario.</span>
-                                        </h4>
-                                    </div>
-                                    <form id="loginForm">
-                                        <div class="form-row">
-                                            <div class="col-md-12">
-                                                <div class="position-relative form-group">
-                                                    <input name="email" id="email" placeholder="Ingrese su email aqui..." type="email" class="form-control">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-12">
-                                                <div class="position-relative form-group">
-                                                    <input name="password" id="password" placeholder="Ingrese su clave aqui..." type="password" class="form-control">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer clearfix">
-                                   
-                                    <div class="float-right">
-                                        <button class="btn btn-primary btn-lg" type="submit" data-theme="g" name="submit" >Acceder al Dashboard</button>
-                                       
-                                    </div>
-                                </div>
-                                    </form>
-                            </div>
-                        </div>
-
-                        <div class="text-center text-white opacity-8 mt-3">Copyright © ArboApp 2020</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-
- 
-<script >
-
-$("#loginForm").submit(function(event)
-{
-    event.preventDefault();
-    $.ajax({
-        type: "POST",
-        url: "http://localhost:8000/api/auth/login",
-        data:({
-            email : $('#email').val(),
-            password: $('#password').val()
-        }),
-        success: function(result)
-        {
-              
-            if(result['access_token']!=null)
-            {
-              window.localStorage.setItem('access_token', result['access_token']);
-            
-                window.location = 'http://localhost:3000'; //just to show that it went through
-         
-            }
-            else
-            {
-                $('#result').empty().addClass('error')
-                    .append('Something is wrong.');
-            }
-        }
-    });
-    return false; 
-});
-</script>
-
-
-
-
-
-
- <%else%>
-
-
 <body>
 
   <div class="app-container app-theme-white body-tabs-shadow closed-sidebar closed-sidebar-mobile">
     <div class="app-header header-shadow">
       <div class="app-header__logo">
-        <div class="logo-src"></div>
+        
         <div class="header__pane ml-auto">
           <div>
             <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
@@ -172,7 +78,7 @@ $("#loginForm").submit(function(event)
                 <div class="widget-content-left">
                   <div class="btn-group">
                     <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-                      <img width="42" class="rounded-circle" src="<%= asset_path('images1.svg') %>" alt="">
+                      <img width="42" class="rounded-circle" src="<%= asset_path('avatars/1.jpg') %>" alt="">
                       <i class="fa fa-angle-down ml-2 opacity-8"></i>
                     </a>
                     <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
@@ -300,9 +206,9 @@ $("#loginForm").submit(function(event)
                    <% end %>
                  </li>
                  <li>
-                   <%= link_to mapa_distrito_path do %>
+                   <%= link_to mapa_path do %>
                    <i class="metismenu-icon"></i>
-                   Mapa de Positivos en distritos
+                   Mapa de Positivos por Barrios
                    <% end %>
                  </li>
                  
@@ -333,14 +239,7 @@ $("#loginForm").submit(function(event)
                
              </ul>
            </li>
-            <li class="app-sidebar__heading">Ayuda</li>
-             <li>
-               <%= link_to ayuda_path do %>
-                 <i class="metismenu-icon pe-7s-help1  "></i>
-                 Ayuda/Instrucciones de uso
-                 <% end %>
-             
-           </li>
+         </ul>
        </div>
      </div>
    </div>    
@@ -376,7 +275,4 @@ $("#loginForm").submit(function(event)
 </div>
 
 </body>
-
-
-   <%end%>
 </html>
